[package]
name = "pca9685_lib"
version = "0.2.0"
authors = ["Jake Armstrong <Lainkai@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["i2c", "pwm"]
description = "A library for communicating to a PCA9685 Chip for Raspberry Pi."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
documentation = "https://team3487-redpriderobotics.github.io/pca9685_lib/pca9685_lib/"

[dependencies]
rppal = "0.11.3"
log = "0.4.8"
tokio = { version = "0.2", features = ["time"] }